@@ -6,6 +6,8 @@ Development
 - pmount: mount UDF with default umask 000, so that the UDF permissions are not
   altered
 - check for HAL libraries at configure time and conditionally build pmount-hal
+- add configure options for external programs and paths, so that policy.h does
+  not need to be altered for installation customizations any more
 
 0.9.11
 ------
